Truncate brand name to prevent layout shift when space is constrained

--- a/assets/_sass/components/left-nav/_navbar.scss
+++ b/assets/_sass/components/left-nav/_navbar.scss
@@ -174,6 +174,10 @@ $nav-item-border: darken($navbar-default-bg, 8%);
           color: $color-dark-grey;
           width: 100%;
           margin: 0;
+          // Truncate brand name to prevent layout shift when space is constrained
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
 
         .quality-category-labels {
